сохранил все изменения

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,11 @@ nbproject
 .settings
 composer.lock
 vendor/bin
-*/doctrine-orm-module/config/module.config.php
+!vendor/doctrine/doctrine-orm-module/config/module.config.php
 zend_error_log
 access-zend.log
 *_log
 *tar.gz
 *.bak
 *.sql
+vendor/phpunit/phpunit/phpunit
