исключил конфиг doctrine-orm

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ nbproject
 .settings
 composer.lock
 vendor/bin
-!vendor/doctrine/doctrine-orm-module/config/module.config.php
+*/doctrine-orm-module/config/module.config.php
 zend_error_log
 access-zend.log
 *_log
